Implmented a fix for buttons on IOS

--- a/css/styles.css
+++ b/css/styles.css
@@ -136,6 +136,9 @@ html {
     border-right: none;
     border-left: none;
     cursor: pointer;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
     font-family: inherit;
     font-size: inherit; }
 
@@ -153,7 +156,6 @@ html {
   justify-content: flex-end; }
   @media only screen and (max-width: 37.5em) {
     .navigation-main {
-      display: none;
       flex-direction: column;
       align-items: flex-end; } }
 
