--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -24,7 +24,10 @@
         border-right: none;
         border-left: none;
         cursor: pointer;
-        font-family: inherit;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;         
+        font-family: inherit;  
         font-size: inherit; 
     }
 }
